# dspy-domain-train

./: .env.example  .gitignore  2026-05-19-dspy-app-review.md  2026-05-19-multiwoz-domain-labeling.md  2026-05-20-srp-debug-status.md  README.md  domain_task.py  instrumentation.py  main.py  mise.toml  pyproject.toml  settings.demo.toml  settings.hard.toml  settings.legacy.toml  settings.local.example.toml  settings.py  settings.toml  training.py
data/: dev.json
prompts/: p0.txt
scripts/: build_hard_slice.py  convert_multiwoz.py
src/dspy_domain_train/: __init__.py  domain_task.py  instrumentation.py  main.py  settings.py  srp.py  toml.py  training.py
tests/: test_build_hard_slice.py  test_convert_multiwoz.py  test_domain_task.py  test_settings.py  test_srp.py  test_training.py
