[project]
name = "dspy-domain-train"
version = "0.1.0"
description = "Train multilabel classification of data using dspy"
requires-python = ">=3.13"
dependencies = [
    "dspy>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

[[tool.mypy.overrides]]
module = ["dspy", "dspy.*"]
ignore_missing_imports = true
